--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   var path = window.location.pathname;
-  var indexPath = '/<repository-name>' + '/index.html';
+  var indexPath = 'Machar-AI' + '/index.html';
   if (path !== '/') {
     window.location.href = indexPath + '?' + path;
   }
